// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileGreeting: six canonical states (snapshots) > long agency and pending incidents (cap) 1`] = `
{
  "asks": null,
  "asserted": [
    "driver_full_name",
  ],
  "confirms": "incidents_3y",
  "dropped": [
    "date",
    "vehicle",
  ],
  "nextStep": {
    "field": "incidents_3y",
    "kind": "confirm",
  },
  "text": "Hi Priya, I'm Daniel's AI assistant, not a person. This call is recorded. I'll finish adding Maya. Ask for Daniel anytime. Just to confirm, Maya had one speeding ticket in 2024 in the last three years?",
  "wordCount": 36,
}
`;

exports[`compileGreeting: six canonical states (snapshots) > nothing known 1`] = `
{
  "asks": "driver_full_name",
  "asserted": [],
  "confirms": null,
  "dropped": [],
  "nextStep": {
    "field": "driver_full_name",
    "kind": "ask",
  },
  "text": "Hi Priya, I'm Daniel's AI assistant, not a person. This call is recorded. I'll finish adding a new driver. Ask for Daniel anytime. I just need the new driver's full name.",
  "wordCount": 31,
}
`;

exports[`compileGreeting: six canonical states (snapshots) > pending name, verified vehicle 1`] = `
{
  "asks": null,
  "asserted": [
    "vehicle_assignment",
  ],
  "confirms": "driver_full_name",
  "dropped": [],
  "nextStep": {
    "field": "driver_full_name",
    "kind": "confirm",
  },
  "text": "Hi Priya, I'm Daniel's AI assistant, not a person. This call is recorded. I'll finish adding a new driver to the 2018 Toyota Highlander. Ask for Daniel anytime. Just to confirm, the new driver's name is Maya?",
  "wordCount": 37,
}
`;

exports[`compileGreeting: six canonical states (snapshots) > s01 all verified 1`] = `
{
  "asks": null,
  "asserted": [
    "driver_full_name",
    "vehicle_assignment",
    "effective_date",
    "premium_new_monthly_usd",
  ],
  "confirms": null,
  "dropped": [],
  "nextStep": {
    "field": null,
    "kind": "none",
  },
  "text": "Hi Priya, I'm Daniel's AI assistant, not a person. This call is recorded. I'll finish adding Maya to the 2021 Honda Civic, starting Friday, October 2nd, at $142 a month. Ask for Daniel anytime. Ready for the updated premium?",
  "wordCount": 39,
}
`;

exports[`compileGreeting: six canonical states (snapshots) > s02 pending date 1`] = `
{
  "asks": null,
  "asserted": [
    "driver_full_name",
    "vehicle_assignment",
    "premium_new_monthly_usd",
  ],
  "confirms": "effective_date",
  "dropped": [],
  "nextStep": {
    "field": "effective_date",
    "kind": "confirm",
  },
  "text": "Hi Mark, I'm Carmen's AI assistant, not a person. This call is recorded. I'll finish adding Lucas to the 2014 Toyota Corolla, at $171 a month. Ask for Carmen anytime. Just to confirm, the change should start Saturday, September 26th?",
  "wordCount": 40,
}
`;

exports[`compileGreeting: six canonical states (snapshots) > s05 missing license state 1`] = `
{
  "asks": "license_state",
  "asserted": [
    "driver_full_name",
    "vehicle_assignment",
    "premium_new_monthly_usd",
  ],
  "confirms": null,
  "dropped": [
    "date",
  ],
  "nextStep": {
    "field": "license_state",
    "kind": "ask",
  },
  "text": "Hi Greg, I'm Kevin's AI assistant, not a person. This call is recorded. I'll finish adding Owen to the 2012 Toyota Camry, at $204 a month. Ask for Kevin anytime. I just need which state issued Owen's license.",
  "wordCount": 38,
}
`;
